config/samples/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dns-allowed
spec:
  podSelector: {}
  egress:
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: casskop-apiserver
spec:
  podSelector:
    matchLabels:
      app: cassandra-operator
  egress:
  - ports:
    - protocol: TCP
      port: 6443
  - to:
    - podSelector:
        matchLabels:
          component: kube-apiserver
    - namespaceSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cassandra-intra-nodes
spec:
  podSelector: &podselector_nodes
    matchLabels:
      app: cassandracluster
  ingress:
  - ports: &intranodes_ports
    - protocol: TCP
      port: 7000
    - protocol: TCP
      port: 7001
  - from:
    - podSelector: *podselector_nodes
  egress:
  - ports: *intranodes_ports
  - to:
    - podSelector: *podselector_nodes
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jolokia-from-casskop-or-nodes
spec:
  podSelector: &podselector_nodes
    matchLabels:
      app: cassandracluster
  ingress:
  - ports:
    - protocol: TCP
      port: 8778
  - from:
# from operator
    - podSelector:
        matchLabels:
          app: cassandra-operator
# from other nodes - used during bootstrap
    - podSelector: *podselector_nodes
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: native-from-clients
spec:
  podSelector:
    matchLabels:
      app: cassandracluster
  ingress:
  - ports:
    - protocol: TCP
      port: 9042
  - from:
    - podSelector:
        matchExpressions:
          - key: app
            operator: In
            values:
              - cassandra-stress
              - toolbox
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: native-client-nodes
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - cassandra-stress
          - toolbox
  egress:
  - ports:
    - protocol: TCP
      port: 9042
  - to:
    - podSelector:
        matchLabels:
          component: cassandracluster
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-jmx-nodes
spec:
  podSelector:
    matchLabels:
      app: cassandracluster
  ingress:
  - ports:
    - protocol: TCP
      port: 9500
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: prometheus
